@@ -41,9 +41,9 @@ object *get_connection_rune(object *pl, short x, short y);
 object *get_msg_book(object *pl, short x, short y);
 object *get_wall(struct mapdef *map, int x, int y);
 void fix_walls(struct mapdef *map, int x, int y);
-void apply_builder_floor(object *pl, object *material, short x, short y);
-void apply_builder_wall(object *pl, object *material, short x, short y);
-void apply_builder_item(object *pl, object *item, short x, short y);
+int apply_builder_floor(object *pl, object *new_floor, short x, short y);
+int apply_builder_wall(object *pl, object *new_wall, short x, short y);
+int apply_builder_item(object *pl, object *new_item, short x, short y);
 void apply_builder_remove(object *pl, int dir);
 void apply_map_builder(object *pl, int dir);
 int adjust_sign_msg(object *pl, short x, short y, object *tmp);
